jsoup changelog

*** Release 1.8.4 [PENDING]
 * Fixed an issue in the Parent selector where it would not match against the root element it was applied to.
   <https://github.com/jhy/jsoup/pull/619>

*** Release 1.8.3 [2015-Aug-02]
 * Added support for custom boolean attributes.
   <https://github.com/jhy/jsoup/pull/555>

 * When fetching XML URLs, automatically switch to the XML parser instead of the HTML parser.
   <https://github.com/jhy/jsoup/pull/574>

 * Performance improvement on parsing larger HTML pages. On Android KitKat, around 1.7x times faster. On Android
   Lollipop, ~ 1.3x faster. Improvements largely from re-ordering the HtmlTreeBuilder methods based on analysis of
   various websites; also from further memory reduction for nodes with no children, and other tweaks.
   
 * Fixed an issue in Element.getElementSiblingIndex (and related methods) where sibling elements with the same content
   would incorrectly have the same sibling index.
   <https://github.com/jhy/jsoup/issues/554>

 * Fixed an issue where unexpected elements in a badly nested table could be moved to the wrong location in the
   document.
   <https://github.com/jhy/jsoup/issues/552>

 * Fixed an issue where a table nested within a TH cell would parse to an incorrect tree.
   <https://github.com/jhy/jsoup/issues/575>

 * When serializing a document using the XHTML encoding entities, if the character set did not support &nbsp; chars
   (such as Shift_JIS), the character would be skipped. For visibility, will now always output &xa0; when using XHTML
   encoding entities (as &nbsp; is not defined), regardless of the output character set.
   <https://github.com/jhy/jsoup/issues/523>

 * Fixed an issue when resolving URLs, if the absolute URL had no path, the relative URL was not normalized correctly.
   Also fixed an issue where connections that were redirected to a relative URL did not have the same normalization
   rules as a URL read from Nodes.absUrl(String).