@@ -4,6 +4,9 @@ jsoup changelog
  * Fixed an issue in the Parent selector where it would not match against the root element it was applied to.
    <https://github.com/jhy/jsoup/pull/619>
 
+ * Fix an issue where elements.select(query) would not return every matching element if they had the same content.
+   <https://github.com/jhy/jsoup/issues/614>
+
 *** Release 1.8.3 [2015-Aug-02]
  * Added support for custom boolean attributes.
    <https://github.com/jhy/jsoup/pull/555>
